# aoc25-no-ai

./: .gitignore  README.md  bootstrap.py  pyproject.toml
.github/workflows/: main.yml
aoc25/: main.py
aoc25/src/puzzles/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
